--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FinalProject</string>
     <string name="text_login">登入</string>
+    <string name="title_activity_maps_main">Map</string>
 </resources>
