--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FinalProject</string>
     <string name="text_login">登入</string>
     <string name="title_activity_maps_main">Map</string>
+    <string name="facebook_app_id">1733527306889936</string>
 </resources>
